src/test/ui/inference/cannot-infer-partial-try-return.stderr
error[E0282]: type annotations needed for `Result<(), QualifiedError<_>>`
  --> $DIR/cannot-infer-partial-try-return.rs:18:13
   |
LL |     let x = || -> Result<_, QualifiedError<_>> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: try giving this closure an explicit return type
   |
LL |     let x = || -> Result<(), QualifiedError<_>> {
   |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
